refactor: Update app name and print size
Rename project and update metadata to reflect the new application name "Anix Copiadora Polaroid Studio".

Adjust print dimensions from 6x8cm to 7x10cm across the application, including UI elements, styling, and relevant file names.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "polaroid-studio-6x8",
+  "name": "anix-copiadora-polaroid-studio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
